{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 158,
  "lineage": "477a0b0c-02ad-dc5e-c81a-eb88cda2be56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fornat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b231b463e885b469",
            "domain": "vpc",
            "id": "eipalloc-0b231b463e885b469",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-121-185.compute-1.amazonaws.com",
            "public_ip": "34.230.121.185",
            "public_ipv4_pool": "amazon",
            "tags": {
            },
            "tags_all": {
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094dbaee3a266f2dc",
            "domain": "vpc",
            "id": "eipalloc-094dbaee3a266f2dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-1-32-224.compute-1.amazonaws.com",
            "public_ip": "52.1.32.224",
            "public_ipv4_pool": "amazon",
            "tags": {
            },
            "tags_all": {
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002647daca5bfd3b5",
            "domain": "vpc",
            "id": "eipalloc-002647daca5bfd3b5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-228-147.compute-1.amazonaws.com",
            "public_ip": "34.193.228.147",
            "public_ipv4_pool": "amazon",
            "tags": {
            },
            "tags_all": {
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:internet-gateway/igw-0daf55bd6fcec28ff",
            "id": "igw-0daf55bd6fcec28ff",
            "owner_id": "777922313341",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "forprivatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b231b463e885b469",
            "connectivity_type": "public",
            "id": "nat-04a747c2a502aa27f",
            "network_interface_id": "eni-0e5950402c7ba04d8",
            "private_ip": "10.5.1.251",
            "public_ip": "34.230.121.185",
            "subnet_id": "subnet-0cb24af1edadf7c49"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094dbaee3a266f2dc",
            "connectivity_type": "public",
            "id": "nat-0cb804a633ce94996",
            "network_interface_id": "eni-0d2834001592da21f",
            "private_ip": "10.5.2.237",
            "public_ip": "52.1.32.224",
            "subnet_id": "subnet-0ae00a432b638bca3"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002647daca5bfd3b5",
            "connectivity_type": "public",
            "id": "nat-03d77a21563ff45dc",
            "network_interface_id": "eni-0f27a35addd67ffb5",
            "private_ip": "10.5.3.89",
            "public_ip": "34.193.228.147",
            "subnet_id": "subnet-05330e630c9a5e9e5"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:route-table/rtb-08646f55e715c3b66",
            "id": "rtb-08646f55e715c3b66",
            "owner_id": "777922313341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04a747c2a502aa27f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-route-private-subnet-1",
              "environment": ""
            },
            "tags_all": {
              "Name": "-route-private-subnet-1",
              "environment": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:route-table/rtb-089c1b5628db0a492",
            "id": "rtb-089c1b5628db0a492",
            "owner_id": "777922313341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cb804a633ce94996",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-route-private-subnet-2",
              "environment": ""
            },
            "tags_all": {
              "Name": "-route-private-subnet-2",
              "environment": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:route-table/rtb-053591826789fb033",
            "id": "rtb-053591826789fb033",
            "owner_id": "777922313341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03d77a21563ff45dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-route-private-subnet-3",
              "environment": ""
            },
            "tags_all": {
              "Name": "-route-private-subnet-3",
              "environment": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:route-table/rtb-01f195cc688367f81",
            "id": "rtb-01f195cc688367f81",
            "owner_id": "777922313341",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0daf55bd6fcec28ff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ad26bb6390405e",
            "route_table_id": "rtb-01f195cc688367f81",
            "subnet_id": "subnet-0cb24af1edadf7c49"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028fae31ae0380adb",
            "route_table_id": "rtb-01f195cc688367f81",
            "subnet_id": "subnet-0ae00a432b638bca3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e35a030ee7b8a3c6",
            "route_table_id": "rtb-01f195cc688367f81",
            "subnet_id": "subnet-05330e630c9a5e9e5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068aa439f7172e739",
            "route_table_id": "rtb-08646f55e715c3b66",
            "subnet_id": "subnet-0fcf650e4f99f81ac"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_route_table.private_subnets",
            "aws_subnet.private-subnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f6babac2c15a79d",
            "route_table_id": "rtb-089c1b5628db0a492",
            "subnet_id": "subnet-06f550c9f4d4aaa6b"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_route_table.private_subnets",
            "aws_subnet.private-subnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d360e5190bb3e9c2",
            "route_table_id": "rtb-053591826789fb033",
            "subnet_id": "subnet-0393efcb5f71876e7"
          },
          "dependencies": [
            "aws_eip.fornat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.forprivatesubnets",
            "aws_route_table.private_subnets",
            "aws_subnet.private-subnets",
            "aws_subnet.subnet1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-0fcf650e4f99f81ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcf650e4f99f81ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-06f550c9f4d4aaa6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f550c9f4d4aaa6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-0393efcb5f71876e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393efcb5f71876e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-0cb24af1edadf7c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb24af1edadf7c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-0ae00a432b638bca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae00a432b638bca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:subnet/subnet-05330e630c9a5e9e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05330e630c9a5e9e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777922313341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-00d51239158ef80ed"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777922313341:vpc/vpc-00d51239158ef80ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-011bcf7158ead6842",
            "default_route_table_id": "rtb-0d352b5ca6b458533",
            "default_security_group_id": "sg-04e4fa1aeb105335f",
            "dhcp_options_id": "dopt-06891b758fda35e5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d51239158ef80ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d352b5ca6b458533",
            "owner_id": "777922313341",
            "tags": {
              "name": "vpc-"
            },
            "tags_all": {
              "name": "vpc-"
            }
          }
        }
      ]
    }
  ]
}